Add IntArrayList to store tokens without boxing
Before:
Benchmark                                              (dataFolderPath)  Mode  Cnt  Score   Error  Units
SingleThreadedBenchmark.benchmarkCl100kBase                        data    ss   10  3.263 ± 0.286   s/op
SingleThreadedBenchmark.benchmarkCl100kBaseTokenCount              data    ss   10  2.688 ± 0.054   s/op
SingleThreadedBenchmark.benchmarkP50kBase                          data    ss   10  5.335 ± 0.106   s/op
SingleThreadedBenchmark.benchmarkP50kEdit                          data    ss   10  5.277 ± 0.067   s/op
SingleThreadedBenchmark.benchmarkR50kBase                          data    ss   10  5.002 ± 0.091   s/op

After:
Benchmark                                              (dataFolderPath)  Mode  Cnt  Score   Error  Units
SingleThreadedBenchmark.benchmarkCl100kBase                        data    ss   10  2.498 ± 0.019   s/op
SingleThreadedBenchmark.benchmarkCl100kBaseTokenCount              data    ss   10  2.223 ± 0.014   s/op
SingleThreadedBenchmark.benchmarkP50kBase                          data    ss   10  4.354 ± 0.122   s/op
SingleThreadedBenchmark.benchmarkP50kEdit                          data    ss   10  4.341 ± 0.076   s/op
SingleThreadedBenchmark.benchmarkR50kBase                          data    ss   10  4.068 ± 0.020   s/op